fix: Fixed dark mode bug.

--- a/packages/module/src/LogViewer/css/log-viewer.css
+++ b/packages/module/src/LogViewer/css/log-viewer.css
@@ -50,14 +50,14 @@
   height: var(--pf-v6-c-log-viewer--Height);
   max-height: var(--pf-v6-c-log-viewer--MaxHeight);
 }
-.pf-v6-c-log-viewer.pf-v6-theme-dark {
+.pf-v6-c-log-viewer.pf-m-dark {
   --pf-v6-c-log-viewer__main--BorderWidth: var(--pf-v6-c-log-viewer--m-dark__main--BorderWidth);
 }
-.pf-v6-c-log-viewer.pf-v6-theme-dark .pf-v6-c-log-viewer__main {
-  --pf-v6-c-log-viewer__main--BackgroundColor: var(--pf-t--global--background--color--primary--default);
+html:not(.pf-v6-theme-dark) .pf-v6-c-log-viewer.pf-m-dark .pf-v6-c-log-viewer__main {
+  --pf-v6-c-log-viewer__main--BackgroundColor: var(--pf-t--global--background--color--inverse--default);
   --pf-v6-c-log-viewer__main--BorderColor: var(--pf-t--global--border--color--default);
-  --pf-v6-c-log-viewer__text--Color: var(--pf-t--global--text--color--regular);
-  --pf-v6-c-log-viewer__index--Color: var(--pf-t--global--text--color--subtle);
+  --pf-v6-c-log-viewer__text--Color: var(--pf-t--global--text--color--inverse);
+  --pf-v6-c-log-viewer__index--Color: var(--pf-t--global--text--color--inverse);
   --pf-v6-c-log-viewer--m-line-numbers__list--before--BackgroundColor: var(--pf-t--global--border--color--default);
 }
 .pf-v6-c-log-viewer.pf-m-wrap-text {
